# lecp

./: .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  Cargo.toml  LICENSE  biome.json  clippy.toml  justfile  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rspress.config.ts  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md  renovate.json
.github/workflows/: ci.yml  deploy.yml
crates/bundless/: Cargo.toml
crates/bundless/src/: lib.rs  main.rs  options.rs  swc.rs  transform_extensions.rs  transform_shims.rs  util.rs
crates/js_compiler/: Cargo.toml
crates/js_compiler/src/: js_compiler.rs  lib.rs
crates/lint/: Cargo.toml
crates/lint/src/: a.json  config_builder.rs  environments.rs  eslint.json  file_diagnostic.rs  lib.rs  lint_mode.rs  main.rs  named_source.rs  oxc.json  promise.json  react.json  rule_builder.rs  rules.rs  typescript.json  unicorn.json
crates/lint/src/correctness/: for_direction.rs
crates/lint/src/oxc_conf/: mod.rs  std_2025_06_01.rs
crates/lint/src/rules/: category_getter.rs  eslint.rs  mod.rs  oxc.rs  promise.rs  react.rs  react_config.rs  rule_getter.rs  typescript.rs  typescript_config.rs  unicorn.rs
crates/lint/src/rules/v2025_06_01/: category.rs  eslint.rs  jest.rs  mod.rs  oxc.rs  promise.rs  react.rs  typescript.rs  unicorn.rs
crates/node_binding/: .gitignore  demo.mts  index.d.ts  index.js  package.json  tsconfig.json
crates/node_binding/.github/workflows/: ci.yml
crates/node_binding/npm/darwin-arm64/: README.md  package.json
crates/node_binding/npm/darwin-x64/: package.json
crates/node_binding/npm/linux-arm64-gnu/: README.md  package.json
crates/node_binding/npm/linux-arm64-musl/: README.md  package.json
crates/node_binding/npm/linux-x64-gnu/: README.md  package.json
crates/node_binding/npm/linux-x64-musl/: README.md  package.json
crates/node_binding/npm/win32-arm64-msvc/: README.md  (+1 more)
crates/node_binding/src/: lib.rs
crates/transform_define/: Cargo.toml  package.json  readme.md
crates/transform_define/src/: lib.rs  transform.rs
crates/transform_define/transform/: Cargo.toml
crates/transform_define/transform/src/: lib.rs
crates/transform_extensions/: Cargo.toml  package.json  readme.md
crates/transform_extensions/src/: lib.rs  transform.rs
crates/transform_extensions/transform/: Cargo.toml
crates/transform_extensions/transform/src/: lib.rs
crates/transform_shims/: Cargo.toml  package.json  readme.md
crates/transform_shims/src/: lib.rs  transform.rs
crates/transform_shims/transform/: Cargo.toml
crates/transform_shims/transform/src/: lib.rs
crates/transform_ts2js/: Cargo.toml  package.json  readme.md
crates/transform_ts2js/src/: lib.rs  transform.rs
crates/transform_ts2js/transform/: Cargo.toml
crates/transform_ts2js/transform/src/: lib.rs
crates/walk_parallel/: Cargo.toml
crates/walk_parallel/src/: lib.rs  walk_patterns.rs
docs/: changelog.md  cli-api.md  config.md  index.md  upgrade.md
docs/features/: build-mode.md  dts.md  prebuild.md  react.md  shims.md  targets.md  workspace.md
docs/guide/: intro.md  start.mdx
examples/demo-component/: lecp.config.ts  package.json  tsconfig.json
examples/demo-component/src/: global.d.ts  index.tsx
examples/demo-sdk/: lecp.config.ts  package.json  tsconfig.json
examples/demo-sdk/src/: alias.ts  index.ts  shims.ts
examples/demo-test/: a.test.js
napi/node_binding/: .gitignore  Cargo.toml  demo.mts  package.json
napi/node_binding/npm/darwin-arm64/: README.md  package.json
napi/node_binding/npm/darwin-x64/: README.md  package.json
napi/node_binding/npm/linux-arm64-gnu/: README.md  package.json
napi/node_binding/npm/linux-arm64-musl/: README.md  package.json
napi/node_binding/npm/linux-x64-gnu/: README.md  package.json
napi/node_binding/npm/linux-x64-musl/: README.md  package.json
napi/node_binding/npm/win32-arm64-msvc/: README.md  package.json
napi/node_binding/npm/win32-x64-msvc/: README.md  package.json
napi/node_binding/src/: lib.rs
patches/: rspack-chain.patch
tests/: util.ts
tests/fixtures/alias/: index.test.ts  lecp.config.ts  package.json  tsconfig.json
tests/fixtures/alias-from-tsconfig/: index.test.ts  lecp.config.ts  package.json  tsconfig.json
tests/fixtures/bundle-browser-esm-cjs/: index.test.ts  lecp.config.ts
tests/fixtures/bundle-browser-esm-cjs-external/: lecp.config.ts  package.json
tests/fixtures/bundle-node-esm-cjs/: demo.cjs  demo.mjs  index.test.ts  lecp.config.ts  tsconfig.json
tests/fixtures/bundle-umd/: index.test.ts  lecp.config.ts  package.json  tsconfig.json
tests/fixtures/define/: index.test.ts  lecp.config.ts  package.json
tests/fixtures/dts-swc-alias/: index.test.ts  lecp.config.ts  tsconfig.json
tests/fixtures/dts-swc-isolated-declarations/: index.test.ts  package.json  tsconfig.json
tests/fixtures/dts-tsc/: index.test.ts  lecp.config.ts
tests/fixtures/dts-tsc-alias/: index.test.ts  tsconfig.json
tests/fixtures/dts-tsc-isolated-declarations/: index.test.ts  lecp.config.ts
tests/fixtures/dts-tsc-tsx/: index.test.ts
tests/fixtures/entry/: index.test.ts  lecp.config.ts  package.json  tsconfig.json
tests/fixtures/extensions-commonjs/: index.test.ts  package.json
tests/fixtures/extensions-module/: index.test.ts  lecp.config.ts
tests/fixtures/external-helper/: index.test.ts  lecp.config.ts  package.json
tests/fixtures/external-helper-false/: index.test.ts  lecp.config.ts
tests/fixtures/react-css/: index.test.ts  lecp.config.ts  package.json  tsconfig.json
tests/fixtures/react-css-module/: index.test.ts  lecp.config.ts  package.json  tsconfig.json
tests/fixtures/react-jsx-runtime/: index.test.ts  lecp.config.ts
tests/fixtures/react-jsx-runtime-classic/: index.test.ts  lecp.config.ts
tests/fixtures/react-less/: index.test.ts  lecp.config.ts
tests/fixtures/shims/: index.test.ts  lecp.config.ts
tests/fixtures/sourcemap/: index.test.ts  lecp.config.ts
tests/fixtures/sourcemap-node/: index.test.ts  lecp.config.ts
tests/fixtures/svg-react/: index.test.ts  lecp.config.ts  package.json
(+41 files in other folders)
