[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
authors      = []
edition      = "2024"
homepage     = "https://github.com/sheinsight/lecp"
license      = ""
repository   = "https://github.com/sheinsight/lecp.git"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow     = "1.0.98"
env_logger = "0.11.8"
log        = "0.4.17"
miette     = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.0", features = ["supports-colors"] }
path-clean = "1.0.1"
pathdiff   = "0.2.3"
rayon      = "1.10.0"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
swc_core   = { version = "29.1.0", features = ["parallel_rayon"] }
thiserror  = "2.0.12"
tokio      = { version = "1.45.1", features = ["fs"] }
wax        = "0.6.0"

lecp_bundless            = { path = "./crates/bundless" }
swc-plugin-css-modules   = { git = "https://github.com/dr2009/swc-plugin-css-modules", branch = "dev" }
swc_transform_define     = { path = "./crates/transform_define/transform" }
swc_transform_extensions = { path = "./crates/transform_extensions/transform" }
swc_transform_shims      = { path = "./crates/transform_shims/transform" }
swc_transform_ts2js      = { path = "./crates/transform_ts2js/transform" }

# napi
napi        = { version = "3.0.0-beta.8", features = ["async", "anyhow"] }
napi-build  = { version = "2.2.1" }
napi-derive = { version = "3.0.0-beta.8", default-features = false, features = ["type-def"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi ge1.0.219 wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

[profile.release]
# This removes more dead code
codegen-units = 1
lto           = true

# Optimize for size
opt-level = "s"

# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
# strip = "symbols
