[package]
name    = "lecp_bundless"
version = "0.1.0"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
anyhow       = { workspace = true }
env_logger   = { workspace = true }
log          = { workspace = true }
miette       = { workspace = true }
oxc_resolver = { workspace = true }
path-clean   = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
swc_core     = { workspace = true, features = ["base", "ecma_ast", "common", "ecma_utils", "ecma_visit"] }
thiserror    = { workspace = true }
wax          = { workspace = true }

swc_transform_define     = { workspace = true }
swc_transform_extensions = { workspace = true }
swc_transform_shims      = { workspace = true }
swc_transform_ts2js      = { workspace = true }
