[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "js_compiler"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
anyhow        = { workspace = true }
walk_parallel = { path = "../walk_parallel" }
