[package]
name = "lint"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxc_linter = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = {workspace = true}
oxc_semantic = {workspace = true}
rustc-hash = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = {workspace = true,features = ["fancy"]}
anyhow = { workspace = true }
wax = { workspace = true }
rayon = { workspace = true }
