[package]

authors      = { workspace = true }
description  = "SWC plugin for https://www.npmjs.com/package/babel-plugin-transform-define"
edition      = { workspace = true }
name         = "swc_plugin_transform_define"
repository   = { workspace = true }
rust-version = { workspace = true }
version      = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = { workspace = true }
swc_core   = { workspace = true, features = ["ecma_plugin_transform"] }
