[package]
description = "SWC plugin for https://www.npmjs.com/package/babel-plugin-transform-define"
name        = "swc_plugin_transform_define"
version     = "0.1.0"

authors      = { workspace = true }
edition      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }


[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json           = { workspace = true }
swc_core             = { workspace = true, features = ["ecma_plugin_transform"] }
swc_transform_define = { path = "./transform" }
