[package]

authors      = { workspace = true }
description  = ""
edition      = { workspace = true }
name         = "swc_plugin_transform_extensions"
repository   = { workspace = true }
rust-version = { workspace = true }
version      = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
swc_core   = { workspace = true, features = ["ecma_plugin_transform"] }
