[package]
name    = "swc_plugin_transform_extensions"
version = "0.1.0"

authors      = { workspace = true }
description  = ""
edition      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde                    = { workspace = true }
serde_json               = { workspace = true }
swc_core                 = { workspace = true, features = ["ecma_plugin_transform"] }
swc_transform_extensions = { path = "./transform" }
