[package]
description = ""
name        = "swc_plugin_transform_ts2js"
version     = "0.1.0"

authors      = { workspace = true }
edition      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde               = { workspace = true }
serde_json          = { workspace = true }
swc_core            = { workspace = true, features = ["ecma_plugin_transform"] }
swc_transform_ts2js = { path = "./transform" }
