[package]
name = "walk_parallel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wax = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }