[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "walk_parallel"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
anyhow = { workspace = true }
rayon  = { workspace = true }
serde  = { workspace = true }
wax    = { workspace = true }
