[package]
name    = "lecp_node_binding"
version = "1.0.0"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lecp_bundless = { workspace = true }
napi          = { workspace = true }
napi-derive   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true, features = ["fs"] }

[build-dependencies]
napi-build = { workspace = true }

# [profile.release]
# lto   = true
# strip = "symbols"
